WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280750
[Navigation] Fix cross-document navigations
https://bugs.webkit.org/show_bug.cgi?id=280750
Summary
[Navigation] Fix cross-document navigations
Rob Buis
Reported
2024-10-02 03:14:10 PDT
Fix cross-document navigations.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2024-10-02 06:20:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34570
EWS
Comment 2
2024-10-07 14:19:05 PDT
Committed
284785@main
(61ed07908d96): <
https://commits.webkit.org/284785@main
> Reviewed commits have been landed. Closing PR #34570 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-07 14:22:36 PDT
<
rdar://problem/137452874
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug